--- a/investisement.html
+++ b/investisement.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acceuil</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <title>investisement</title>
+    <link rel="stylesheet" href="./css/investisement.css">
 </head>
 <body>
     
