create a navigation responsive

--- a/investisement.html
+++ b/investisement.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="./css/investisement.css">
 </head>
 <body>
-    
+    <header id="head">
+        <a href="./index.html"><img class="logo" src="./images/logo.svg" alt=""></a>
+        <img id="burger" src="./images/burger.svg" alt="">
+        <ul id="nav" class="nav">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./investisement.html">investisement</a></li>
+            <li><a href="./Pret.html">Prets</a></li>
+            <li><a href="./Apropos.html">A propos</a></li>
+            <li><a href="./Contact.html">Contact</a></li>
+            <li><a href="./login.html">Connecter</a></li>
+        </ul>
+        <button><a href="./login.html">Connecter</a></button>
+    </header>
+    <script src="./script.js"></script>
 </body>
 </html>
