add the first section

--- a/investisement.html
+++ b/investisement.html
@@ -20,6 +20,9 @@
         </ul>
         <button><a href="./login.html">Connecter</a></button>
     </header>
+    <section class="home">
+        <h1>Investisement</h1>
+    </section>
     <script src="./script.js"></script>
 </body>
 </html>
