add the project section

--- a/investisement.html
+++ b/investisement.html
@@ -14,7 +14,7 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./investisement.html">investisement</a></li>
             <li><a href="./Pret.html">Prets</a></li>
-            <li><a href="./Apropos.html">A propos</a></li>
+            <li><a href="./Apropos.html">Apropos</a></li>
             <li><a href="./Contact.html">Contact</a></li>
             <li><a href="./login.html">Connecter</a></li>
         </ul>
@@ -22,6 +22,69 @@
     </header>
     <section class="home">
         <h1>Investisement</h1>
+    </section>
+    <section class="project">
+        <div class="description">
+            <h2>Projets Innovants à Découvrir</h2>
+            <hr>
+            <p>Découvrez des investissements rentables et à impact positif dans l'immobilier, la technologie et les énergies renouvelables. Rejoignez-nous !</p>
+        </div>
+        <div class="projects">
+            <div class="card">
+                <img src="./images/agriculture.png" alt="">
+                <h3>AgriSustain</h3>
+                <p>Notre projet agricole se concentre sur la production durable et innovante de cultures de haute qualité, tout en préservant l'environnement. Nous intégrons des techniques modernes d'agriculture, telles que l'irrigation intelligente et l'agroécologie, pour maximiser les rendements tout en minimisant l'impact écologique.</p>
+                <div>
+                    <p class="date">2024/2026</p>
+                    <button class="invest">Invest</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./images/energie.png" alt="">
+                <h3>AgriSustain</h3>
+                <p>Notre projet agricole se concentre sur la production durable et innovante de cultures de haute qualité, tout en préservant l'environnement. Nous intégrons des techniques modernes d'agriculture, telles que l'irrigation intelligente et l'agroécologie, pour maximiser les rendements tout en minimisant l'impact écologique.</p>
+                <div>
+                    <p class="date">2024/2026</p>
+                    <button class="invest">Invest</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./images/crypto.png" alt="">
+                <h3>AgriSustain</h3>
+                <p>Notre projet agricole se concentre sur la production durable et innovante de cultures de haute qualité, tout en préservant l'environnement. Nous intégrons des techniques modernes d'agriculture, telles que l'irrigation intelligente et l'agroécologie, pour maximiser les rendements tout en minimisant l'impact écologique.</p>
+                <div>
+                    <p class="date">2024/2026</p>
+                    <button class="invest">Invest</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./images/habitat.png" alt="">
+                <h3>AgriSustain</h3>
+                <p>Notre projet agricole se concentre sur la production durable et innovante de cultures de haute qualité, tout en préservant l'environnement. Nous intégrons des techniques modernes d'agriculture, telles que l'irrigation intelligente et l'agroécologie, pour maximiser les rendements tout en minimisant l'impact écologique.</p>
+                <div>
+                    <p class="date">2024/2026</p>
+                    <button class="invest">Invest</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./images/innovate.png" alt="">
+                <h3>AgriSustain</h3>
+                <p>Notre projet agricole se concentre sur la production durable et innovante de cultures de haute qualité, tout en préservant l'environnement. Nous intégrons des techniques modernes d'agriculture, telles que l'irrigation intelligente et l'agroécologie, pour maximiser les rendements tout en minimisant l'impact écologique.</p>
+                <div>
+                    <p class="date">2024/2026</p>
+                    <button class="invest">Invest</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./images/capital.png" alt="">
+                <h3>AgriSustain</h3>
+                <p>Notre projet agricole se concentre sur la production durable et innovante de cultures de haute qualité, tout en préservant l'environnement. Nous intégrons des techniques modernes d'agriculture, telles que l'irrigation intelligente et l'agroécologie, pour maximiser les rendements tout en minimisant l'impact écologique.</p>
+                <div>
+                    <p class="date">2024/2026</p>
+                    <button class="invest">Invest</button>
+                </div>
+            </div>
+        </div>
     </section>
     <script src="./script.js"></script>
 </body>
