work on the footer responsivite

--- a/investisement.html
+++ b/investisement.html
@@ -86,6 +86,52 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="all">
+            <div class="c1">
+                <div class="Fdescription">
+                    <img src="./images/LogoFooter.png" alt="">
+                    <p>Votre partenaire de confiance pour un avenir financier prospère.</p>
+                </div>
+                <div class="Explore">
+                    <h4>Explore</h4>
+                    <ul>
+                        <li>Acceuil</li>
+                        <li>Investissement</li>
+                        <li>Prets</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="c2">
+                <div class="Apropos">
+                    <h5>Apropos</h5>
+                    <ul>
+                        <li>(212) 789-12301</li>
+                        <li>Future@Bank.com</li>
+                        <li>South 13th street</li>
+                        <li>Rabat Maroc</li>
+                    </ul>
+                </div>
+                <div class="social">
+                    <h6>Suivez-nous</h6>
+                    <div class="socialLinks">
+                        <img src="./images/facebook.svg" alt="">
+                        <img src="./images/linkDin.svg" alt="">
+                        <svg width="46" height="46" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                            <path d="M17.5 6.5h.01"></path>
+                          </svg>
+                        <img src="./images/whatssap.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>© 2024 Codebenders. All rights reserved</p>
+        </div>
+    </footer>
     <script src="./script.js"></script>
 </body>
 </html>
