--- a/Pret.html
+++ b/Pret.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pret</title>
+    <link rel="stylesheet"
+    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="./css/Pret.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -60,6 +62,48 @@
             <button>Envoyer</button>
         </div>
     </section>
+
+    <section class="footer">
+        
+        <div class="futurebank">
+            <h4>FutureBank</h4>
+            <p>Votre partenaire de <br>confiance pour un avenir <br> financier prospère.</p>
+        </div>
+
+        <div class="list">
+            <h4>Explore</h4>
+            <ul>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#">Investissement</a></li>
+                <li><a href="#">Prets</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+
+        <div class="list">
+            <h4>A propos</h4>
+            <ul>
+                <li><a href="#">(212)789-12301</a></li>
+                <li><a href="#">Future@Bank.com</a></li>
+                <li><a href="#">South 13th street</a></li>
+                <li><a href="#">Rabat Maroc</a></li>
+            </ul>
+        </div>
+
+        <div class="list">
+            <h4>Suivez-nous</h4>
+            <div class="social">
+                <a href="#"><i class='bx bxl-facebook' ></i></a>
+                <a href="#"><i class='bx bxl-pinterest' ></i></a>
+                <a href="#"><i class='bx bxl-whatsapp' ></i></a>
+                <a href="#"><i class='bx bxl-linkedin' ></i></a>
+            </div>
+        </div>
+        
+    </section>
+    <div class="ruban">
+        <h3>© 2024 Codebenders. All rights reserved</h3>    
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
