--- a/Contact.html
+++ b/Contact.html
@@ -7,11 +7,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet"
+    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+
     <link rel="stylesheet" href="./css/Contact.css">
     <script src="https://kit.fontawesome.com/aa7454d09f.js" crossorigin="anonymous"></script>
 </head>
 <body>
-     <!--section d'entête-->
      <header id="head">
        <a href="./index.html"><img class="logo" src="./images/logo.svg" alt=""></a>
        <img id="burger" src="./images/burger.svg" alt="">
@@ -25,6 +27,8 @@
         </ul>
         <button><a href="./login.html">Connecter</a></button>
       </header>
+
+      <!--section d'entête-->
       <section class="home-pret" id="home">
         <div class="home-text">
             <h1>FutureBank</h1>
@@ -91,29 +95,71 @@
         <div class="accordion-item">
           <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Comment puis-je ouvrir un compte bancaire ?</span><span class="icon" aria-hidden="true"></span></button>
           <div class="accordion-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+            <p>Vous pouvez ouvrir un compte en ligne sur notre plateforme en cliquant sur l'onglet "Connecter".</p>
           </div>
         </div>
         <hr>
   
         <div class="accordion-item">
-          <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Comment puis-je ouvrir un compte bancaire ?</span><span class="icon" aria-hidden="true"></span></button>
+          <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Quels documents dois-je fournir pour un prêt ?</span><span class="icon" aria-hidden="true"></span></button>
           <div class="accordion-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+            <p>Vous devrez fournir une pièce d'identité, une preuve de revenu, et un justificatif de domicile.</p>
           </div>
         </div>
         <hr>
   
         <div class="accordion-item">
-          <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Comment puis-je ouvrir un compte bancaire ?</span><span class="icon" aria-hidden="true"></span></button>
+          <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Comment puis-je contacter un conseiller ?</span><span class="icon" aria-hidden="true"></span></button>
           <div class="accordion-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+            <p>Vous pouvez nous contacter via le formulaire ci-dessus ou appeler notre numéro gratuit : 212 *********.</p>
           </div>
         </div>
         <hr>
   
       </div>
     </div>
+
+    <section class="footer">
+
+      <div class="futurebank">
+          <h4>FutureBank</h4>
+          <p>Votre partenaire de <br>confiance pour un avenir <br> financier prospère.</p>
+      </div>
+
+      <div class="list">
+          <h4>Explore</h4>
+          <ul>
+              <li><a href="#">Accueil</a></li>
+              <li><a href="#">Investissement</a></li>
+              <li><a href="#">Prets</a></li>
+              <li><a href="#">Contact</a></li>
+          </ul>
+      </div>
+
+      <div class="list">
+          <h4>A propos</h4>
+          <ul>
+              <li><a href="#">(212)789-12301</a></li>
+              <li><a href="#">Future@Bank.com</a></li>
+              <li><a href="#">South 13th street</a></li>
+              <li><a href="#">Rabat Maroc</a></li>
+          </ul>
+      </div>
+
+      <div class="list">
+          <h4>Suivez-nous</h4>
+          <div class="social">
+              <a href="#"><i class='bx bxl-facebook' ></i></a>
+              <a href="#"><i class='bx bxl-pinterest' ></i></a>
+              <a href="#"><i class='bx bxl-whatsapp' ></i></a>
+              <a href="#"><i class='bx bxl-linkedin' ></i></a>
+          </div>
+      </div>
+
+  </section>
+  <div class="ruban2">
+      <h3>© 2024 Codebenders. All rights reserved</h3>
+  </div>
 
     <script src="./script.js"></script>
     <script src="./scriptcontact.js"></script>
