--- a/Contact.html
+++ b/Contact.html
@@ -65,7 +65,7 @@
           <img src="images/Capture_d_écran_2024-10-21_145739-removebg-preview.png" alt="icone" class="contactIcon">
           <article class="text">
               <h1 class="sub-heading">Emplacement</h1>
-              <p class="para">aaaaaaaaaaaaaaaa</p>
+              <p class="para">South 13th street</p>
           </article>
         </div>
         
@@ -74,7 +74,7 @@
           <img src="images/Capture_d_écran_2024-10-21_152136-removebg-preview.png" alt="icone" class="contactIcon">
           <article class="text">
               <h1 class="sub-heading">Email</h1>
-              <p class="para">aaaaaaaaaaaaaaaa</p>
+              <p class="para">Future@Bank.com</p>
           </article>
         </div>
   
@@ -83,7 +83,7 @@
           <img src="images/Capture_d_écran_2024-10-21_152457-removebg-preview.png" alt="icone" class="contactIcon">
           <article class="text">
               <h1 class="sub-heading">Téléphone</h1>
-              <p class="para">aaaaaaaaaaaaaaaa</p>
+              <p class="para">(212)789-12301</p>
           </article>
         </div>
       </div>
@@ -111,7 +111,7 @@
         <div class="accordion-item">
           <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Comment puis-je contacter un conseiller ?</span><span class="icon" aria-hidden="true"></span></button>
           <div class="accordion-content">
-            <p>Vous pouvez nous contacter via le formulaire ci-dessus ou appeler notre numéro gratuit : 212 *********.</p>
+            <p>Vous pouvez nous contacter via le formulaire ci-dessus ou appeler notre numéro gratuit : (212)789-12301.</p>
           </div>
         </div>
         <hr>
