work on page aprops

--- a/Apropos.html
+++ b/Apropos.html
@@ -20,6 +20,173 @@
         </ul>
         <button><a href="./login.html">Connecter</a></button>
     </header>
-    <script src="./script.js"></script>
+    <!-- header-->
+<section class="head">
+    <div class="hello">
+        <h4>FutureBank</h4>
+        <h2>Votre partenaire<br> de confiance</h2>
+    </div>
+</section>
+<!-- Landing Page -->
+<section >
+    <div class="p1">
+        <h2>Nous Connaitre</h2>
+        <p>Chez FutureBank, nous nous engageons à offrir une expérience bancaire innovante et<br>collaborative. Depuis notre création en 1995, notre mission est de réinventer la manière<br>dont nos clients gèrent leurs finances. Nous mettons l'accent sur l'autonomie et la<br>transparence, en proposant une plateforme qui permet à chaque utilisateur de maîtriser<br>ses investissements tout en accédant à des solutions de prêt simples et performantes.</p>
+        <h4>Nos Valeurs</h4>
+        <div class="stickers">
+            <div class="stick">
+                <img src="images/images-Apropos/sticker1.png" alt="sticker1">
+                <img src="images/images-Apropos/sticker2.png" alt="sticker2">
+                <img src="images/images-Apropos/sticker3.png" alt="sticker3">
+            </div>
+            <ul type=none>
+            <li>Engagement</li>
+            <li>Confiance</li>
+            <li>Innovation</li>
+            </ul>
+        </div>
+    </div>
+    <hr>
+    <div class="p2">
+        <img src="images/images-Apropos/meeting.jpg" alt="meeting">
+        <div class="Engagement">
+            <h2>Engagement</h2>
+            <p>Notre banque s'engage à offrir des solutions<br>financières personnalisées et accessibles à tous.<br>Avec une solide expérience de plusieurs<br>décennies, nous nous dévouons à accompagner<br>nos clients dans la réalisation de leurs projets,<br>qu'ils soient personnels ou professionnels. Grâce<br>à notre approche centrée sur l’innovation et<br>l’écoute, nous adaptons nos services pour<br>répondre aux besoins spécifiques de chaque<br>client, garantissant ainsi un accompagnement sur<br>mesure à chaque étape de leur parcours financier.</p>
+        </div>
+    </div>
+    <hr>
+    <div class="p3">
+        <div class="Innovation">
+            <h2>Innovation</h2>
+            <p>L'innovation est au cœur de notre mission, qui<br>va bien au-delà des simples services financiers.<br>Nous nous engageons à améliorer le bien-être<br>économique de nos clients tout en favorisant le<br>développement de notre communauté. En<br>investissant dans des technologies de pointe et<br>des solutions durables, nous créons des<br>opportunités qui profitent à chacun. Ensemble,<br>grâce à des solutions novatrices, nous<br>construisons un avenir plus inclusif et prospère<br>pour tous.</p>
+        </div>
+        <img src="images/images-Apropos/innovation.jpg" alt="Innovation">
+    </div>
+    <hr>
+    <div class="p4">
+        <div class="Confiance">
+            <h2>Confiance</h2>
+            <p>Nous croyons en l'importance d'une relation de confiance.<br>C'est pourquoi notre équipe de conseillers qualifiés est<br>toujours prête à écouter vos besoins et à vous proposer des<br>solutions adaptées. Grâce à des technologies innovantes,<br>nous facilitons vos opérations bancaires et vous offrons un<br>accès rapide à vos services. En combinant expertise humaine<br>et outils numériques de pointe, nous assurons une gestion<br>fluide et sécurisée de vos finances, tout en vous garantissant<br>un accompagnement personnalisé à chaque étape.</p>
+        </div>
+        <img src="images/images-Apropos/confiance.jpg" alt="confiance">
+    </div>
+    <hr>
+    <div class="p5">
+        <h2>Nos Realisations</h2>
+        <p>Nos réalisations illustrent  notre engagement envers l'innovation technologique, la<br>durabilité, et le développement de partenariats stratégiques</p>
+        <div class="slide1">
+            <div class="futureBank">
+                <h2>FuturBank App</h2>
+                <img src="images/images-Apropos/slide1.png" alt="slide1">
+            </div>
+            <div class="description">
+                <p>Description : Nous avons développé et lancé une<br>application mobile intuitive permettant aux<br>utilisateurs de gérer leurs comptes, réaliser des<br>transactions sécurisées, et suivre leurs<br>investissements en temps réel. Avec des<br>fonctionnalités avancées comme le paiement<br>sans contact et la gestion des dépenses,<br>l'application a reçu plus de 100 000<br>téléchargements dans les trois premiers mois.</p>
+                <p>Impact : Une amélioration de 30 % de<br>l'engagement client et une augmentation<br>significative des transactions en ligne.</p>
+            </div>
+        </div>
+        <div class="elm-slide">
+            <ul class="static1" type=none>
+                <li>1825</li>
+                <li>351</li>
+                <li>95%</li>
+            </ul>
+            <ul class="static2" type=none>
+                <li>FutureBankiens</li>
+                <li>Entrepreneurs </li>
+                <li>Réussite</li>
+            </ul>
+        </div>
+    </div>
+    <hr>
+    <div class="p6">
+        <h2>Nos Partenaires</h2>
+        <p>Chez FutureBank, nous croyons en la puissance de la collaboration. Nos partenaires stratégiques, issus de divers secteurs, partagen<br>notre vision d'un avenir financier innovant et accessible. Grâce à ces alliances, nous offrons à nos utilisateurs des solutions<br>diversifiées et des projets d'investissement attrayants, garantissant une expérience optimale. Ensemble, nous construisons une<br>communauté engagée, prête à relever les défis de demain.</p>
+    </div>
+
+<div class="Partenaires">
+    <div class="part1">
+        <img src="images/images-Apropos/invest2.jpg" alt="invest2">
+        <div class="info-part">
+            <h3>Sophie Bernard</h3>
+            <h5>Directrice Total</h5>
+            <p>Vous aide à améliorer votre<br>expérience client grâce à des<br>solutions sur mesure en<br>analyse bancaire, parfaitement<br>adaptées à vos besoins.</p>
+        </div>
+    </div>
+    <div class="part2">
+        <img src="images/images-Apropos/invest3.jpg" alt="invest3">
+        <div class="info-part">
+            <h3>Lucas Martin</h3>
+            <h5>Conseiller financier Air Maroc</h5>
+            <p>Ma mission est de vous<br>accompagner dans la<br>concrétisation de vos projets et<br>de vous aider à réussir en tant<br>que jeune entrepreneur.</p>
+        </div>
+    </div>
+    <div class="part3">
+        <img src="images/images-Apropos/invest4.jpg" alt="invest4">
+        <div class="info-part">
+            <h3>Claire Lefèvre</h3>
+            <h5>Expert Comptable OCP</h5>
+            <p>Je m'engage à inspirer mon<br>équipe avec un leadership fort<br>et une vision claire, tout en<br>vous accompagnant dans vos<br>investissements.</p>
+        </div>
+    </div>
+</div>
+  
+<div class="sponsor">
+    <img src="images/images-Apropos/sponsor1.png" alt="sponsor1">
+    <img src="images/images-Apropos/sponsor2.png" alt="sponsor2">
+    <img src="images/images-Apropos/sponsor3.png" alt="sponsor3">
+    <img src="images/images-Apropos/sponsor4.png" alt="sponsor4">
+    <img src="images/images-Apropos/sponsor5.png" alt="sponsor5">
+    <img src="images/images-Apropos/sponsor6.png" alt="sponsor6">
+</div>
+</section>
+
+
+<footer>
+    <div class="all">
+        <div class="c1">
+            <div class="Fdescription">
+                <img src="./images/LogoFooter.png" alt="">
+                <p>Votre partenaire de confiance pour un avenir financier prospère.</p>
+            </div>
+            <div class="Explore">
+                <h4>Explore</h4>
+                <ul>
+                    <li>Acceuil</li>
+                    <li>Investissement</li>
+                    <li>Prets</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </div>
+        <div class="c2">
+            <div class="Apropos">
+                <h5>Apropos</h5>
+                <ul>
+                    <li>(212) 789-12301</li>
+                    <li>Future@Bank.com</li>
+                    <li>South 13th street</li>
+                    <li>Rabat Maroc</li>
+                </ul>
+            </div>
+            <div class="social">
+                <h6>Suivez-nous</h6>
+                <div class="socialLinks">
+                    <img src="./images/facebook.svg" alt="">
+                    <img src="./images/linkDin.svg" alt="">
+                    <svg width="46" height="46" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                        <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                        <path d="M17.5 6.5h.01"></path>
+                      </svg>
+                    <img src="./images/whatssap.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <p>© 2024 Codebenders. All rights reserved</p>
+    </div>
+</footer>
+<script src="./script.js"></script>
 </body>
 </html>
