--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </ul>
     <button><a href="./login.html">Connecter</a></button>
   </header>
-  <script src="./script.js"></script>
+  <script src="./js/script.js"></script>
   <!--------------- home --------------------->
 
 <section class="home-pret" id="home">
